vlib/v/checker/tests/fn_args.out
vlib/v/checker/tests/fn_args.vv:6:5: error: invalid argument 1 to `ptr`: expected `byte`, not `&int`
    4 |
    5 | v := 4
    6 | ptr(&v)
      |     ~~
    7 | arr([5]!!)
    8 | fun(fn(i &int){})
vlib/v/checker/tests/fn_args.vv:7:5: error: invalid argument 1 to `arr`: expected `[]int`, not `[1]int`
    5 | v := 4
    6 | ptr(&v)
    7 | arr([5]!!)
      |     ~~~~~
    8 | fun(fn(i &int){})
vlib/v/checker/tests/fn_args.vv:8:5: error: invalid argument 1 to `fun`: expected `fn (int)`, not `fn (&int)`
    6 | ptr(&v)
    7 | arr([5]!!)
    8 | fun(fn(i &int){})
      |     ~~~~~~~~~~~~
details: ``'s expected fn argument: `` is NOT a pointer, but the passed fn argument: `i` is a pointer